# agi-hackaton

./: README.md  package-lock.json
backend/: create_calendar_event.py  main.py  pyproject.toml  update_google_docs.py
backend/assets/: dx.txt  fhir.json  pre-chart-initial.md  prompt.txt
frontend/: index.html  package-lock.json  package.json
frontend-giusi/src/components/: App.tsx  MedicalChat.tsx
frontend-pre-chart/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: App.tsx  PreChartReport.tsx
